lib/src/compiler/tests/testdata/errors/22.out
error[E002]: wrong type
 --> line:5:20
  |
5 |     any of them at "10"
  |                    ^^^^ expression should be `integer`, but it is `string`
  |